tests/testcases/invalid/semantic/44_complex_missing_return.ciel
// Error: complex control flow, missing return on some paths
int complex_logic(int x, int y, bool flag) {
    if (x > 0) {
        if (flag) {
            return 1;
        }
        // Missing return when x > 0 && !flag
    } else if (y > 0) {
        return 2;
    } else {
        if (flag) {
            return 3;
        }
        return 4;
    }
    // Error: path when x > 0 && !flag reaches here
}

int main() {
    int result = complex_logic(5, 0, false);
    return 0;
}
